Fixed modal dialoge box flicker on page load.

--- a/maalstroom/templates/dds/style.css
+++ b/maalstroom/templates/dds/style.css
@@ -516,6 +516,7 @@ dds refresh text
 	-moz-transition: opacity 400ms ease-in;
 	transition: opacity 400ms ease-in;
 	pointer-events: none;
+	display: none;
 }
 .modalDialog-dmail:target {
 	opacity:1;
